# ChonoDB

./: .dockerignore  .gitignore  CODE_REVIEW_FIXES.md  Cargo.toml  Dockerfile  Dockerfile.cn  Dockerfile.local  Makefile  README.en.md  README.md  alert_rules.yaml  chronodb-fix-plan.md  chronodb-prometheus-comparison-report-fixed.md  chronodb-prometheus-comparison-report.md  chronodb_test.yaml  docker-compose.prometheus.yml  docker-compose.yml  docker-daemon-config.json  performance_test.rs  prometheus.yml  prometheus_chronodb.yml  prometheus_test.yml  server_log.txt  test_alert_rules.yaml  test_docker_debug.py  test_docker_prometheus.py  test_docker_simple.py  test_http_methods.py  test_report.md
chronodb-cli/: Cargo.toml
chronodb-cli/src/: api.rs  main.rs  stress_test.rs  tools.rs
server/: Cargo.toml
server/src/: config.rs  error.rs  lib.rs  main.rs  remote_server.rs  server.rs  state.rs  static_files.rs
server/src/alerting/: templates.rs
server/src/api/: admin.rs  handlers.rs  mod.rs  models.rs  opentsdb.rs  response.rs
server/src/auth/: mod.rs
server/src/federation/: mod.rs
server/src/metrics/: mod.rs
server/src/monitoring/: mod.rs
server/src/nlp/: mod.rs
server/src/rules/: alerting.rs  evaluator.rs  mod.rs  pre_aggregation.rs  recording.rs  scheduler.rs
server/src/service_discovery/: mod.rs
server/src/targets/: mod.rs  scraper.rs
server/tests/: monitoring_test.rs
server/web/: .env.development  .env.production  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
server/web/src/: App.tsx  main.tsx
server/web/src/api/: admin.ts  client.ts  index.ts  query.ts  types.ts  write.ts
server/web/src/components/: index.ts
server/web/src/hooks/: index.ts  useQuery.ts  useRefresh.ts  useTimeRange.ts
server/web/src/pages/Alerts/: index.tsx  (+2 more)
server/web/src/stores/: index.ts  useAppStore.ts  useSettingsStore.ts  useUserStore.ts
server/web/src/styles/: global.css  variables.css
server/web/src/types/: common.ts  index.ts  metrics.ts  query.ts
server/web/src/utils/: constants.ts  format.ts  index.ts  promql.ts  time.ts
storage/: Cargo.toml  build.rs
storage/benches/: distributed_benchmark.rs  parallel_query_benchmark.rs  storage_benchmark.rs
storage/src/: error.rs  export.rs  lib.rs
storage/src/backup/: mod.rs
storage/src/batch_export/: mod.rs
storage/src/columnstore/: block.rs  block_format.rs  column.rs  compression.rs  mod.rs  reader.rs  writer.rs
storage/src/compaction/: mod.rs
storage/src/compression/: delta.rs  dictionary.rs  mod.rs  prediction.rs  zstd.rs
storage/src/config/: manager.rs  mod.rs  yaml_config.rs
storage/src/distributed/: cluster.rs  coordinator.rs  mod.rs  preagg_coordinator.rs  query_coordinator.rs  replication.rs  shard.rs
storage/src/downsample/: manager.rs  mod.rs  scheduler.rs  task.rs  worker.rs
storage/src/fault_injection/: mod.rs
storage/src/features/: mod.rs
storage/src/flush/: mod.rs
storage/src/index/: bitmap.rs  bloom.rs  inverted.rs  mod.rs
storage/src/memstore/: chunk.rs  head.rs  mod.rs  pool.rs  store.rs
storage/src/metadata/: etcd.rs  mod.rs
storage/src/metrics/: exporter.rs  mod.rs
storage/src/migration/: mod.rs
storage/src/model/: mod.rs  pre_aggregation.rs
storage/src/query/: cache.rs  cost_optimizer.rs  downsample_router.rs  engine.rs  executor.rs  frequency.rs  mod.rs  optimizer.rs  parallel.rs  parser.rs  planner.rs  router.rs  vectorized.rs
storage/src/raft/: mod.rs
storage/src/remote/: codec.rs  mod.rs  read.rs  write.rs
storage/src/remote/prompb/: mod.rs  remote.proto
storage/src/rpc/: mod.rs
storage/src/storage/: backend.rs  gcs.rs  local.rs  mod.rs  s3.rs
storage/src/summary/: mod.rs  tests.rs
storage/src/tiered/: auto_migration.rs  manager.rs  migration.rs  mod.rs  tier.rs
storage/src/vectorization/: mod.rs
storage/src/wal/: async_writer.rs  entry.rs  mod.rs  reader.rs  writer.rs
storage/test_backups/backup_1775912771/: backup.metadata
storage/test_backups/backup_1775912771/wal/: segment-00000000000000000000
storage/test_backups/backup_1775947767/: backup.metadata
storage/test_backups/backup_1775947767/wal/: segment-00000000000000000000
storage/test_backups_inc/backup_1775912771/: backup.metadata
storage/test_backups_inc/backup_1775912771/wal/: segment-00000000000000000000
storage/test_backups_inc/backup_1775947767/: backup.metadata
storage/test_backups_verify/backup_1775912771/: backup.metadata
storage/test_backups_verify/backup_1775947767/: backup.metadata
storage/tests/: backup_integration_test.rs  backup_test.rs  distributed_integration_test.rs  downsample_integration_test.rs  fault_injection_test.rs  fo_integration_test.rs  integration_tests.rs  migration_test.rs  network_integration_test.rs  parallel_query_test.rs  pre_aggregation_integration_test.rs  promql_at_modifier_test.rs  promql_by_clause_test.rs  promql_count_values_test.rs  promql_logical_ops_test.rs  promql_offset_modifier_test.rs  promql_quantile_test.rs  promql_scalar_vector_test.rs  promql_subquery_test.rs  promql_topk_bottomk_test.rs  query_performance_test.rs  storage_integration_test.rs  write_performance_test.rs
(+248 files in other folders)
