[workspace]
members = [
    "storage",
    "chronodb-cli",
    "server", "perf-test",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ChronoDB Team"]
license = "Apache-2.0"
repository = "https://github.com/chronodb/chronodb"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zstd = "0.13"
memmap2 = "0.9"
parking_lot = "0.12"
dashmap = "5.5"
bytes = "1.5"
prost = "0.12"
prost-types = "0.12"
snap = "1.1"
crc32fast = "1.3"
twox-hash = "1.6"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.9"
criterion = "0.5"
regex = "1.10"
axum = "0.7"
http = "1.1"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.6", features = ["v4"] }
num_cpus = "1.16"
serde_yaml = "0.9"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
aws-sdk-s3 = "1.0"
aws-config = "1.0"
aws-credential-types = "1.0"
google-cloud-storage = "0.15"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
