[package]
name = "chronodb-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "chronodb"
path = "src/main.rs"

[dependencies]
chronodb-storage = { path = "../storage" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower-http.workspace = true
chrono.workspace = true
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
