[package]
name = "chronodb-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chronodb-storage = { path = "../storage" }

# Web framework
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde_urlencoded = "0.7.1"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
bytes.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
num_cpus = "1.16"

# Async
async-trait.workspace = true

# Time
humantime = "2.1"

# HTTP client
reqwest.workspace = true
parse_duration = "2.1.1"
clap = { version = "4.6.0", features = ["derive"] }

# Authentication
base64 = "0.21"
rand = "0.8"

# TLS
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"

[dev-dependencies]
tempfile.workspace = true
