[package]
name = "chronodb-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
zstd.workspace = true
memmap2.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
bytes.workspace = true
prost.workspace = true
prost-types.workspace = true
snap.workspace = true
crc32fast.workspace = true
twox-hash.workspace = true
rand.workspace = true
chrono.workspace = true
regex.workspace = true
uuid.workspace = true
num_cpus.workspace = true
serde_yaml.workspace = true
async-trait.workspace = true
aws-sdk-s3 = "1.0"
aws-config = "1.0"
aws-credential-types = "1.0"
google-cloud-storage = "0.15"
urlencoding = "2.1"
bincode = "1.3"
etcd-client = "0.14"

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[features]
default = []
simd = []
